Fix spacing

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body, html{
 .containerHeader{
     display:flex;
     margin-left: 15vw;
-    padding-top:5vh; 
+    padding-top:8vh; 
     justify-content: left;
     align-items: center;
     color:white;
